Form for logging in, if a known email address was entered

--- a/webapp/src/i18n/messages.json
+++ b/webapp/src/i18n/messages.json
@@ -10,6 +10,16 @@
       "email": {
         "label": "Email Address"
       }
+    },
+    "login": {
+      "label": "Login",
+      "submit": "Login",
+      "email": {
+        "label": "Email Address"
+      },
+      "password": {
+        "label": "Password"
+      }
     }
   }
 }
