Separated out the rendering and state management parts of the Start Auth form

--- a/webapp/src/i18n/messages.json
+++ b/webapp/src/i18n/messages.json
@@ -8,7 +8,10 @@
       "label": "Login / Register",
       "submit": "Login / Register",
       "email": {
-        "label": "Email Address"
+        "label": "Email Address",
+        "validation": {
+          "missing": "Email Address was not provided"
+        }
       }
     },
     "login": {
