Re-worked the Login Form

--- a/webapp/src/i18n/messages.json
+++ b/webapp/src/i18n/messages.json
@@ -21,7 +21,10 @@
         "label": "Email Address"
       },
       "password": {
-        "label": "Password"
+        "label": "Password",
+        "validation": {
+          "missing": "Password was not provided"
+        }
       }
     }
   }
